--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
     <title>Escola</title>
 </head>
 <body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="/books">Livros disponíveis</a></li>
+            <li><a href="/postar">Cadastre seu livro</a></li>
+        </ul>
+    </nav>
     {{{body}}}
 </body>
 </html>
